<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title_main">Playlist maker</string>
    <string name="title_settings">Настройки</string>
    <string name="title_find">Поиск</string>
    <string name="title_media">Медиатека</string>
    <string name="button_find">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="button_update">Обновить</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="link_for_practicum">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="link_for_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="message_for_developers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject_for_developers">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="my_email">gurin.andreygv@yandex.ru</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history">Вы искали</string>
    <string name="button_clear_search_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="albumName">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="create_playlist">Создать</string>
    <string name="save_playlist">Сохранить</string>
    <string name="create_playlist_name">Название*</string>
    <string name="create_playlist_description">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="share_menu">Поделиться</string>
    <string name="edit_menu">Редактировать информацию</string>
    <string name="delete_menu">Удалить плейлист</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>