<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".SettingsActivity"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/back_icon"
        android:title="@string/title_settings"
        >
    </Toolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margins"
        android:textSize="@dimen/setttings_menu_items_font_size"
        android:text="@string/dark_theme"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/share"
        android:textColor="@color/button_text"
        android:textSize="@dimen/setttings_menu_items_font_size"
        android:padding="@dimen/margins"
        android:drawableEnd="@drawable/share_icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/support"
        android:textColor="@color/button_text"
        android:textSize="@dimen/setttings_menu_items_font_size"
        android:padding="@dimen/margins"
        android:drawableEnd="@drawable/support_icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/agreement"
        android:textColor="@color/button_text"
        android:textSize="@dimen/setttings_menu_items_font_size"
        android:padding="@dimen/margins"
        android:drawableEnd="@drawable/agreement_icon"/>

</LinearLayout>